# shulkerscript-webpage

./: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: deploy.yml
src/assets/playground/: main.shu  pack.toml
src/components/: Playground.tsx  SplitView.astro  playground.tsx
src/components/override/: ContentPanel.astro  PageTitle.astro  Pagination.astro  SocialIcons.astro
src/components/playground/: DropdownButton.tsx  Editor.tsx  ErrorDisplay.tsx  FileView.tsx  Header.tsx  SplitButton.tsx
src/components/playground/FileView/: AddFileDialog.tsx  DirElement.tsx  FileElement.tsx  index.tsx
src/content/docs/: differences.mdx  github.mdx  index.mdx  roadmap.mdx
src/content/docs/de/: index.mdx
src/content/docs/de/reference/: cli.md
src/content/docs/guides/: getting-started.mdx  syntax.md
src/content/docs/reference/: cli.md  conditionals.md  lua.md  project-config.md
src/pages/: playground.astro
src/pages/de/: playground.astro
src/styles/: playground.scss  style.css
src/utils/: material-ui-theme.ts  mcfunction-grammar.ts  mcscript-grammar.ts  playground.ts  shiki.ts  shulkerscript-grammar.ts
src/wasm/webcompiler/: Cargo.toml
src/wasm/webcompiler/src/: fs.rs  lib.rs  pack_toml.rs  util.rs
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: lib.rs
