[package]
name = "shulkerscript-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"
shulkerscript-lang ={ path = "../../shulkerscript-lang", default-features = false, features = ["shulkerbox", "serde", "wasm"]}
serde = "1.0"
serde-wasm-bindgen = "0.6.5"
