[package]
name = "webcompiler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"
shulkerscript = { git = "https://github.com/moritz-hoelting/shulkerscript-lang.git", default-features = false, features = ["serde", "shulkerbox"], rev = "8953b347c562615fef3a8d500b0bb86f7f717a08" }
serde = "1.0"
serde-wasm-bindgen = "0.6.5"
anyhow = "1.0.86"
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
ansi-to-html = "0.2.1"
colored = "2.1.0"
